<?xml version="1.0"?>
<package format="3">
  <name>ros2_xsens_mti_driver</name>
  <version>1.0.1</version>
  <description>ROS 2.0 driver for Xsens MTi IMU sensors</description>
  <maintainer email="windel.bouwman@demcon.com">Windel Bouwman</maintainer>
  <maintainer email="jasprit@bluespace.ai">BlueSpace.ai</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
